# Amped

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/amped-core/: Cargo.toml
crates/amped-core/src/: lib.rs  model.rs
crates/amped-host/: Cargo.toml
crates/amped-host/src/: lib.rs  loader.rs  sandbox.rs
crates/amped-plugin-api/: Cargo.toml
crates/amped-plugin-api/src/: capability.rs  data.rs  lib.rs  manifest.rs  widget.rs
crates/amped-plugin-api/tests/: manifest_parse.rs  manifest_secret.rs  refresh_model.rs  wit_contract.rs
crates/amped-plugin-api/wit/: plugin.wit
crates/amped-plugin-easee/: Cargo.toml
crates/amped-plugin-easee/src/: auth.rs  client.rs  lib.rs
crates/amped-registry/: Cargo.toml
crates/amped-registry/src/: checksum.rs  lib.rs  local.rs  remote.rs  signature.rs
crates/amped-registry/tests/: registry_load.rs  type_unify.rs
docs/adr/: 0001-m0-m1-scaffold-and-contract.md
plugins/easee/: amped.plugin.toml
registry/: registry.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.svelte  app.css  main.ts  phosphor-web.d.ts
ui/src/lib/: contract.ts  mock.ts  plugins.ts
ui/src/lib/components/: ChargerCard.svelte  (+4 more)
(+5 files in other folders)
