[workspace]
resolver = "2"
members = [
    "crates/amped-plugin-api",
    "crates/amped-core",
    "crates/amped-registry",
    "crates/amped-host",
    "crates/amped-plugin-easee",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/L0rdS474n/Amped"
