[package]
name = "src-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "amped"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
amped-plugin-api = { path = "../crates/amped-plugin-api" }
amped-host = { path = "../crates/amped-host" }
